# fixhs

./: fixhs.cabal
benchmarks/: Benchmark.hs
src/Data/: Coparser.hs  LookupTable.hs
src/Data/FIX/: Arbitrary.hs  Common.hs  Coparser.hs  Message.hs  Parser.hs  ParserCombinators.hs  Spec.hs  Split.hs
src/Data/FIX/Spec/: FIX42.hs
test/: Main.hs
test/Data/FIX/Coparser/: Test.hs
test/Data/FIX/Parser/: Test.hs
test/Data/FIX/ParserCombinators/: Test.hs
test/Data/FIX/Roundtrip/: Test.hs
test/Data/FIX/Test/: Common.hs
testsuite/benchmarks/: Benchmark.hs
