name:                fixhs
version:             0.1.4
description:         Financial Information eXchange (FIX) protocol (co)parser
homepage:            http://github.com/urv/fixhs
synopsis:            FIX (co)parser
category:            Protocol, Text, Parsing
license:             LGPL-2.1
license-file:        LICENSE
author:              Arvin Moezzi
maintainer:          Arvin Moezzi
build-type:          Simple
tested-with:         GHC == 7.0.3, GHC == 8.4.3
cabal-version:       >=1.8
stability:           experimental

source-repository head
  type:     git
  location: http://github.com/urv/fixhs

flag developer
  description: build in development mode
  default: False

flag with-fix40
  description: add fix40 to the module
  default: True

flag with-fix41
  description: add fix41 to the module
  default: True

flag with-fix42
  description: add fix42 to the module
  default: True

flag with-fix43
  description: add fix43 to the module. It takes a long time to compile!
  default: False

flag with-fix44
  description: add fix44 to the module. It takes a long time to compile!
  default: False

library
  hs-source-dirs:    src/
  build-depends:
                     MissingH           >= 1.4.0.1,
                     QuickCheck         >= 2.11.3,
                     base               >= 3 && < 5,
                     bytestring         >= 0.10.8.2,
                     containers         >= 0.5.11.0,
                     deepseq            >= 1.4.3.0,
                     dlist              >= 0.8.0.4,
                     megaparsec         >= 6.5,
                     parser-combinators >= 1.0.0,
                     text               >= 1.2.3.0,
                     time               >= 1.8.0.2,
                     transformers       >= 0.5.5.0,
                     transformers-either

  other-modules:
  exposed-modules:
                     Data.LookupTable
                     Data.Coparser
                     Data.FIX.Arbitrary
                     Data.FIX.Common
                     Data.FIX.Coparser
                     Data.FIX.Parser
                     Data.FIX.ParserCombinators
                     Data.FIX.Message
                     Data.FIX.Spec
                     Data.FIX.Split
  ghc-options:       -Wall -funbox-strict-fields -O2
  if flag(developer)
    ghc-prof-options: -auto-all

  if flag(with-fix40)
    exposed-modules: Data.FIX.Spec.FIX40
    cpp-options: -D__FIX40__
  if flag(with-fix41)
    exposed-modules: Data.FIX.Spec.FIX41
    cpp-options: -D__FIX41__
  if flag(with-fix42)
    exposed-modules: Data.FIX.Spec.FIX42
    cpp-options: -D__FIX42__
  if flag(with-fix43)
    exposed-modules: Data.FIX.Spec.FIX43
    cpp-options: -D__FIX43__
  if flag(with-fix44)
    exposed-modules: Data.FIX.Spec.FIX44
    cpp-options: -D__FIX44__

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  other-modules:
                     Data.FIX.Coparser.Test
                     Data.FIX.Parser.Test
                     Data.FIX.ParserCombinators.Test
                     Data.FIX.Roundtrip.Test
                     Data.FIX.Test.Common
  build-depends:
                     fixhs,
                     -- test deps
                     hedgehog,
                     tasty,
                     tasty-hedgehog,
                     tasty-hunit,
                     tasty-quickcheck,
                     -- library deps
                     MissingH,
                     QuickCheck,
                     megaparsec,
                     parser-combinators,
                     base,
                     bytestring,
                     containers,
                     deepseq,
                     dlist,
                     text,
                     time,
                     transformers,
                     transformers-either

benchmark bench
  type:              exitcode-stdio-1.0
  main-is:           Benchmark.hs
  hs-source-dirs:    benchmarks/
  default-language:  Haskell2010
  build-depends:
                     fixhs,
                     -- benchmark deps
                     gauge        >= 0.2.3,
                     -- library deps
                     MissingH,
                     QuickCheck,
                     megaparsec,
                     parser-combinators,
                     base,
                     bytestring,
                     containers,
                     deepseq,
                     dlist,
                     text,
                     time,
                     transformers,
                     transformers-either
  ghc-options: -Wall -funbox-strict-fields -O2
