cabal-version:       2.2
name:                fixhs
version:             0.1.4
description:         Financial Information eXchange (FIX) protocol (co)parser
homepage:            http://github.com/urv/fixhs
synopsis:            FIX (co)parser
category:            Protocol, Text, Parsing
license:             LGPL-2.1-only
license-file:        LICENSE
author:              Arvin Moezzi
maintainer:          Arvin Moezzi
build-type:          Simple
tested-with:         GHC == 7.0.3, GHC == 8.4.3
stability:           experimental

source-repository head
  type:     git
  location: http://github.com/urv/fixhs

flag developer
  description: build in development mode
  default: False

flag with-fix40
  description: add fix40 to the module
  default: True

flag with-fix41
  description: add fix41 to the module
  default: True

flag with-fix42
  description: add fix42 to the module
  default: True

flag with-fix43
  description: add fix43 to the module. It takes a long time to compile!
  default: False

flag with-fix44
  description: add fix44 to the module. It takes a long time to compile!
  default: False

common deps
  build-depends:
                     MissingH            ^>= 1.4,
                     QuickCheck          ^>= 2.11,
                     attoparsec          ^>= 0.13,
                     base                 >= 3 && < 5,
                     bytestring          ^>= 0.10,
                     containers          ^>= 0.5,
                     deepseq             ^>= 1.4,
                     dlist               ^>= 0.8,
                     megaparsec          ^>= 7,
                     parser-combinators  ^>= 1.0,
                     text                ^>= 1.2,
                     time                ^>= 1.8,
                     transformers        ^>= 0.5,
                     transformers-either ^>= 0.1

common common
  ghc-options:       -Wall

common flags
  if flag(with-fix40)
    cpp-options: -D__FIX40__
  if flag(with-fix41)
    cpp-options: -D__FIX41__
  if flag(with-fix42)
    cpp-options: -D__FIX42__
  if flag(with-fix43)
    cpp-options: -D__FIX43__
  if flag(with-fix44)
    cpp-options: -D__FIX44__
  if flag(with-fix40) || flag(with-fix41) || flag(with-fix42) || flag(with-fix43) || flag(with-fix44)
    cpp-options: -D__HAS_FIX__

library
  import:            common, deps, flags
  hs-source-dirs:    src/
  other-modules:
  exposed-modules:
                     Data.LookupTable
                     Data.Coparser
                     Data.FIX.Arbitrary
                     Data.FIX.Common
                     Data.FIX.Coparser
                     Data.FIX.Parser
                     Data.FIX.ParserCombinators
                     Data.FIX.Message
                     Data.FIX.Spec
                     Data.FIX.Split
  if flag(with-fix40)
    exposed-modules: Data.FIX.Spec.FIX40
  if flag(with-fix41)
    exposed-modules: Data.FIX.Spec.FIX41
  if flag(with-fix42)
    exposed-modules: Data.FIX.Spec.FIX42
  if flag(with-fix43)
    exposed-modules: Data.FIX.Spec.FIX43
  if flag(with-fix44)
    exposed-modules: Data.FIX.Spec.FIX44
  ghc-options:       -funbox-strict-fields -O2
  if flag(developer)
    ghc-prof-options: -auto-all

test-suite test
  import:            common, deps, flags
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  other-modules:
                     Data.FIX.Coparser.Test
                     Data.FIX.Parser.Test
                     Data.FIX.ParserCombinators.Test
                     Data.FIX.Roundtrip.Test
                     Data.FIX.Test.Common
  build-depends:
                     fixhs,
                     -- test deps
                     hedgehog,
                     tasty,
                     tasty-hedgehog,
                     tasty-hunit,
                     tasty-quickcheck

benchmark bench
  import:            common, deps, flags
  type:              exitcode-stdio-1.0
  main-is:           Benchmark.hs
  hs-source-dirs:    benchmarks/
  default-language:  Haskell2010
  build-depends:
                     fixhs,
                     -- benchmark deps
                     gauge        >= 0.2.3
  ghc-options:       -funbox-strict-fields -O2
